--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,19 +1,11 @@
 <div class="d-flex flex-row justify-content-center">
-    <div [formGroup]="userForm" class="content">
+    <div class="d-flex flex-column justify-content-center">
         <div class="d-flex flex-row justify-content-center">
-            <p class="df-header">Enter your name and id to start discussion</p>
+            <p class="df-header">What do you want to do?</p>
         </div>
-        <mat-card  class="d-flex flex-column justify-content-center">
-            <mat-form-field>
-                <mat-label>Username</mat-label>
-                <input formControlName="username" matInput type="text">
-            </mat-form-field>
-
-            <mat-form-field>
-                <mat-label>Identifier</mat-label>
-                <input formControlName="identifier" matInput type="text">
-            </mat-form-field>
-            <button class="btn margin-right" [disabled]="!userForm.valid"  (click)="onLogin()">LOGIN</button>
-        </mat-card>
+        <div class="flex-parent jc-center">
+    
+            <button class="btn margin-right" (click)="discussion()">Launch Discussion Forum</button>
+        </div>
     </div>
 </div>
