--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,21 @@
-<div class="p-16 d-flex flex-align-justify mb-24">
-  <img src="../assets/images/logo.svg" width="200" alt="title" />
+<div class="d-flex flex-row justify-content-sm-between ">
+  <div class="p-16 d-flex flex-align-justify mb-24">
+    <img src="../assets/images/logo.svg" width="200" alt="title" />
+  </div>
+  <div *ngIf="showButtons" class="d-flex flex-row justify-content-sm-around p-3">
+    <mat-slide-toggle class="p-1" (change)="changeLayout($event)"></mat-slide-toggle>
+
+    <button id="dark-mode-toggle" class="dark-mode-toggle" tabindex="0"
+      title="Dark mode/Normal mode" (click)="changeMode()">
+      <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 496">
+        <path fill="var(--white)"
+          d="M8,256C8,393,119,504,256,504S504,393,504,256,393,8,256,8,8,119,8,256ZM256,440V72a184,184,0,0,1,0,368Z"
+          transform="translate(-8 -8)" />
+      </svg>
+    </button>
+   
+  </div>
 </div>
 
-<router-outlet></router-outlet>
 
+<router-outlet></router-outlet>
